<?xml version="1.0"?>
<package format="2">
  <name>cm_bridge</name>
  <version>0.0.0</version>
  <description>The cm_bridge package</description>

  <maintainer email="il.cucciniello@studenti.unina.it">Ilenia Cucciniello</maintainer>
  <maintainer email="g.larco@studenti.unina.it">Gianluca L'Arco</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>

</package>