<?xml version="1.0"?>
<package format="2">
  <name>cm_bringup</name>
  <version>0.0.0</version>
  <description>The cm_bringup package</description>

  <maintainer email="il.cucciniello@studenti.unina.it">Ilenia Cucciniello</maintainer>
  <maintainer email="g.larco@studenti.unina.it">Gianluca L'Arco</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>